modules/grammars/tool/src/test/resources/cocos/valid/UniqueAttributeResources.td
package valid;

resources UniqueAttributeResources {
    attribute path = "some/awesome/path";

    resource SOME_RESOURCE {
        attribute path = "some/other/awesome/path";
    }
}
